--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^1.7.7",
     "cors": "^2.8.5",
     "express": "^4.21.1",
+    "firebase": "^11.0.1",
     "fuse.js": "^7.0.0",
     "moment": "^2.30.1",
     "mssql": "^11.0.1",
