--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "firebase": "^11.0.1",
     "fuse.js": "^7.0.0",
     "moment": "^2.30.1",
+    "moment-timezone": "^0.5.47",
     "mssql": "^11.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
