--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "mssql": "^11.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-icons": "^5.3.0",
+    "react-google-recaptcha": "^3.1.0",
+    "react-icons": "^5.4.0",
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
     "socket.io": "^4.8.1",
